Manual sliding done

--- a/index.html
+++ b/index.html
@@ -33,23 +33,24 @@
             <div class="slide">
                 <img src="./imgs/img5.jpg" alt="">
             </div>
-            <!-- Auto Navigation -->
-            <div class="nav-auto">
-                <div class="na-btn1"></div>
-                <div class="na-btn2"></div>
-                <div class="na-btn3"></div>
-                <div class="na-btn4"></div>
-                <div class="na-btn5"></div>
-            </div>
-            <!-- Manual Navigation -->
-            <div class="man-nav">
-                <label for="sld1" class="mn-btn"></label>
-                <label for="sld2" class="mn-btn"></label>
-                <label for="sld3" class="mn-btn"></label>
-                <label for="sld4" class="mn-btn"></label>
-                <label for="sld5" class="mn-btn"></label>
-            </div>
+        </div>
+        <!-- Auto Navigation -->
+        <div class="nav-auto">
+            <div class="na-btn1"></div>
+            <div class="na-btn2"></div>
+            <div class="na-btn3"></div>
+            <div class="na-btn4"></div>
+            <div class="na-btn5"></div>
+        </div>
+        <!-- Manual Navigation -->
+        <div class="man-nav">
+            <label for="sld1" class="mn-btn active"></label>
+            <label for="sld2" class="mn-btn"></label>
+            <label for="sld3" class="mn-btn"></label>
+            <label for="sld4" class="mn-btn"></label>
+            <label for="sld5" class="mn-btn"></label>
         </div>
     </div>
+    <script src="./scripts.js"></script>
 </body>
 </html>
