--- a/index.html
+++ b/index.html
@@ -20,18 +20,43 @@
             <!-- Images -->
             <div class="slide">
                 <img src="./imgs/img1.jpg" alt="">
+                <div class="desc">
+                    <h2>Beach Vollyball</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque molestiae commodi deserunt quibusdam sint, debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus! debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus!</p>
+                    <a href="#">View More</a>
+                </div>
             </div>
             <div class="slide">
                 <img src="./imgs/img2.jpg" alt="">
+                <div class="desc">
+                    <h2>Football</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque molestiae commodi deserunt quibusdam sint, debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus! debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus!</p>
+                    <a href="#">View More</a>
+                </div>
             </div>
             <div class="slide">
                 <img src="./imgs/img3.jpg" alt="">
+                <div class="desc">
+                    <h2>Cycling</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque molestiae commodi deserunt quibusdam sint, debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus! debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus!</p>
+                    <a href="#">View More</a>
+                </div>
             </div>
             <div class="slide">
                 <img src="./imgs/img4.jpg" alt="">
+                <div class="desc">
+                    <h2>Tennis</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque molestiae commodi deserunt quibusdam sint, debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus! debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus!</p>
+                    <a href="#">View More</a>
+                </div>
             </div>
             <div class="slide">
                 <img src="./imgs/img5.jpg" alt="">
+                <div class="desc">
+                    <h2>Cricket</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At neque molestiae commodi deserunt quibusdam sint, debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus! debitis pariatur facilis quae, modi corrupti autem voluptates ab animi aliquid beatae iure est voluptatibus!</p>
+                    <a href="#">View More</a>
+                </div>
             </div>
         </div>
         <!-- Auto Navigation -->
