--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="radio" name="sld" id="sld4">
             <input type="radio" name="sld" id="sld5">
             <!-- Images -->
-            <div class="slide">
+            <div class="slide curr">
                 <img src="./imgs/img1.jpg" alt="">
                 <div class="desc">
                     <h2>Beach Vollyball</h2>
