--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Screen Image Slider - Pure JavaScript</title>
+    <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -76,6 +77,7 @@
             <label for="sld5" class="mn-btn"></label>
         </div>
     </div>
+    <!-- Scripts -->
     <script src="./scripts.js"></script>
 </body>
 </html>
