--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Screen Image Slider - Pure JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -60,6 +61,9 @@
                 </div>
             </div>
         </div>
+        <!-- Arrows -->
+        <a class="arrow left" href=""><i class="fas fa-arrow-circle-left"></i></a>
+        <a class="arrow right" href=""><i class="fas fa-arrow-circle-right"></i></a>
         <!-- Manual Navigation -->
         <div class="man-nav">
             <label for="sld1" class="mn-btn active"></label>
