--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <input type="radio" name="sld" id="sld3">
         <input type="radio" name="sld" id="sld4">
         <input type="radio" name="sld" id="sld5">
-        
+
+        <!-- Slides -->
         <div class="slides">
-            <!-- Images -->
-            <div class="slide curr ab1">
+            <!-- Slide 01 -->
+            <div class="slide curr">
                 <img src="./imgs/img1.jpg" alt="">
                 <div class="desc">
                     <h2>Beach Vollyball</h2>
@@ -29,7 +30,8 @@
                     <a href="#">View More</a>
                 </div>
             </div>
-            <div class="slide ab2">
+            <!-- Slide 02 -->
+            <div class="slide">
                 <img src="./imgs/img2.jpg" alt="">
                 <div class="desc">
                     <h2>Football</h2>
@@ -37,7 +39,8 @@
                     <a href="#">View More</a>
                 </div>
             </div>
-            <div class="slide ab3">
+            <!-- Slide 03 -->
+            <div class="slide">
                 <img src="./imgs/img3.jpg" alt="">
                 <div class="desc">
                     <h2>Cycling</h2>
@@ -45,7 +48,8 @@
                     <a href="#">View More</a>
                 </div>
             </div>
-            <div class="slide ab4">
+            <!-- Slide 04 -->
+            <div class="slide">
                 <img src="./imgs/img4.jpg" alt="">
                 <div class="desc">
                     <h2>Tennis</h2>
@@ -53,7 +57,8 @@
                     <a href="#">View More</a>
                 </div>
             </div>
-            <div class="slide ab5">
+            <!-- Slide 05 -->
+            <div class="slide">
                 <img src="./imgs/img5.jpg" alt="">
                 <div class="desc">
                     <h2>Cricket</h2>
