--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- Slider Begins -->
+    <!-- Slider -->
     <div class="slider">
         <!-- Radio Controllers -->
         <input type="radio" name="sld" id="sld1">
